[gd_scene load_steps=7 format=2]

[ext_resource path="res://Images/Intro.PNG" type="Texture" id=1]
[ext_resource path="res://Theme/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/uipack_fixed/Font/kenvector_future.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Music/neighbourhood_music.mp3" type="AudioStream" id=4]
[ext_resource path="res://Scripts/UI/IntroGame.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 3 )

[node name="Node" type="Node"]

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 44.0
texture = ExtResource( 1 )
expand = true
script = ExtResource( 5 )

[node name="Label" type="Label" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -478.0
margin_top = -127.5
margin_right = 478.0
margin_bottom = -16.5
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.870588, 0.960784, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "The grass is always greener
on the other side"
align = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -79.5
margin_top = 53.0
margin_right = 79.5
margin_bottom = 203.0
alignment = 1

[node name="StartButton" type="Button" parent="Background/ButtonsContainer"]
margin_top = 47.0
margin_right = 159.0
margin_bottom = 73.0
theme = ExtResource( 2 )
text = "START"

[node name="ExitButton" type="Button" parent="Background/ButtonsContainer"]
margin_top = 77.0
margin_right = 159.0
margin_bottom = 103.0
theme = ExtResource( 2 )
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -11.0
autoplay = true

[connection signal="pressed" from="Background/ButtonsContainer/StartButton" to="Background" method="_on_StartButton_pressed"]
[connection signal="pressed" from="Background/ButtonsContainer/ExitButton" to="Background" method="_on_ExitButton_pressed"]
